--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=practice_FINALS_CASHIER_INVENTORY_
-main.class=finals_cashier_inventory.FINALS_CASHIER_INVENTORY
+main.class=FINALS_CASHIER_INVENTORY
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
